--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,13 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-ui-router": "^1.0.5",
+    "angular-resource": "^1.6.4",
+    "angular-messages": "^1.6.4",
+    "satellizer": "^0.15.5"
+  },
+  "resolutions": {
+    "angular": ">= 1.2.0"
   }
 }
