--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.0",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
