--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.4.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.0",
     "morgan": "^1.8.2",
     "request-promise": "^4.2.1"
