--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-bootstrap": "^2.5.0",
     "bootstrap-css-only": "^3.3.7",
     "angular-animate": "^1.6.4",
-    "angular-ui-select": "^0.19.8"
+    "angular-ui-select": "^0.19.8",
+    "mh-dragdrop-image": "*"
   },
   "resolutions": {
     "angular": "1.6.4"
